Use String map keys. Handle default settings for all groups. Refactor. Add more tests. Adjust docs.
Signed-off-by: Olga Maciaszek-Sharma <olga.maciaszek-sharma@broadcom.com>